2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus):
	
	Fix error condition check.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	Add more mime types.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* lib/ephy-node.c: (safe_write_string), (ephy_node_write_to_xml):
	* src/bookmarks/ephy-bookmarks-export.c: (sanitise_string),
	(write_topics_list), (write_rdf):

	Make sure we don't write characters < 0x20 (except 0x9, 0xa, 0xd) to
	XML. Bug #392782.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* src/epiphany.override:

	Fix the wrapping of the singleton Ephy[Embed]Shell as
	"epiphany.Shell()". Bug #351705.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* data/Makefile.am:

	Fix schemas install command.

2007-01-23  Christian Persch  <chpe@svn.gnome.org>

	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GeckoPrintService.h:
	* embed/mozilla/GeckoPrintSession.cpp:

	Clear some print settings in the settings we hand to the print job, so
	they don't get applied twice. Bug #394818.

	Prepare for printing to PDF (#if 0'd until the gecko bug is fixed).

2007-01-23  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:
	
	Add another safe mime type.

2007-01-17  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c:
	* lib/widgets/ephy-node-view.c:

	Workaround/semi-fix for bug #351814. The real cause of the problem is
	the user_data that is never set on a GtkTreeIter, so the Ephy
	implementation of the tree makes it to have a stamp of 0 being that
	way an invalid iter. Patch by Diego Escalante Urrelo.

2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* src/ephy-python-extension.c:
	* src/epiphany.override:

	Fixes a problem at link time on Darwin, bug #387233. Patch by paul.

2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>
