@@ -142,3 +142,11 @@ pref("dom.storage.enabled", false);
 
 // warn about about:config
 pref("general.warnOnAboutConfig", true);
+
+// Whether delete and backspace should immediately delete characters not
+// visually adjacent to the caret, or adjust the visual position of the caret
+// on the first keypress and delete the character on a second keypress
+// (added in bug https://bugzilla.mozilla.org/show_bug.cgi?id=328834)
+// set to true for parity with gtk entries
+pref("bidi.edit.delete_immediately", true);
+
